Добавлен второй экран и реализован переход через интент_резалт

--- a/app/src/main/res/layout/content_change.xml
+++ b/app/src/main/res/layout/content_change.xml
@@ -10,21 +10,26 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.i7_4770k.myapplication.MainActivity"
-    tools:showIn="@layout/activity_main"
-    android:tag="ww">
+    tools:context="com.example.i7_4770k.myapplication.ChangeActivity"
+    tools:showIn="@layout/activity_change">
 
     <TextView
-        android:id="@+id/text_view_cloc"
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Время"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <Button
-        android:id="@+id/button_change_cloc"
+        android:id="@+id/button1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Изменить время?" />
+        android:text="Передать время" />
+
+
+    <TimePicker
+        android:id="@+id/timePicker1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
