--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -27,4 +27,18 @@
         android:layout_height="wrap_content"
         android:text="Изменить время?" />
 
+    <AnalogClock
+        android:id="@+id/analogClock1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
+
+    <DigitalClock
+        android:id="@+id/digitalClock1"
+        android:text="DigitalClock"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textStyle="bold" />
+
 </LinearLayout>
